--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta http-equiv="cleartype" content="on">
     <title>@时光忘忧 - 个人主页</title>
     <link rel="stylesheet" href="CSS/style.css" />
-    <link rel="shortcut icon" href="IMG/logo.jpg">
+    <link rel="shortcut icon" href="IMG/logo.png">
     <script src="JS/Sitetime.js"></script><!-- 运行时间 -->
     <script src="js/sakura-less.js"></script><!-- 花瓣飘落效果 -->
     <script src="js/toggleText.js"></script><!-- 3秒切换标题文字 -->
@@ -19,7 +19,7 @@
 
 <body>
     <div class="main">
-        <div class="logo"><img src="IMG/logo.jpg" class="hover-zoom" onclick="location.reload();"></div>
+        <div class="logo"><img src="IMG/logo.png" class="hover-zoom" onclick="location.reload();"></div>
         <div class="title" style="text-align: center; font-size: 20px;  color: #fc8ec9;">
             <h3 id="toggleText"></h3>
         </div>
