--- a/index.html
+++ b/index.html
@@ -2,19 +2,24 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="renderer" content="webkit">
-    <meta name="force-rendering" content="webkit">
-    <meta http-equiv="cleartype" content="on">
-    <title>@时光忘忧 - 个人主页</title>
-    <link rel="stylesheet" href="CSS/style.css" />
-    <link rel="shortcut icon" href="IMG/logo.png">
-    <script src="JS/Sitetime.js"></script><!-- 运行时间 -->
-    <script src="js/sakura-less.js"></script><!-- 花瓣飘落效果 -->
+    <meta charset="utf-8"> <!-- 设置字符编码为UTF-8 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- 设置视口适应设备宽度 -->
+    <meta name="description" content="bin1site·导航"> <!-- 设置页面描述 -->
+    <meta name="keywords" content="bin1site,导航,bin1,网站导航,网站导航网址,网站导航网址导航,网站导航网址导航网址"> <!-- 设置页面关键词 -->
+    <meta name="author" content="bin1"> <!-- 设置作者 -->
+    <meta name="robots" content="index,follow"> <!-- 设置搜索引擎抓取 -->
+    <meta name="googlebot" content="index,follow"> <!-- 设置谷歌搜索引擎抓取 -->
+    <meta name="bingbot" content="index,follow"> <!-- 设置必应搜索引擎抓取 -->
+    <meta name="slurp" content="index,follow"> <!-- 设置搜狗搜索引擎抓取 -->
+    <meta name="yandex" content="index,follow"> <!-- 设置雅虎搜索引擎抓取 -->
+    <meta name="baidu" content="index,follow"> <!-- 设置百度搜索引擎抓取 -->
+    <meta name="sogou" content="index,follow"> <!-- 设置搜狗搜索引擎抓取 -->
+    <title>🪪@时光忘忧 - 个人主页</title> <!-- 设置页面标题 -->
+    <link rel="stylesheet" href="CSS/style.css"> <!-- 链接外部样式表 -->
+    <script src="js/Sitetime.js"></script><!-- 运行时间 -->
     <script src="js/toggleText.js"></script><!-- 3秒切换标题文字 -->
     <script src="js/colourful-text.js"></script><!-- 8小时彩色文字切换 -->
+    <script src="js/sakura-less.js"></script><!-- 花瓣飘落效果 -->
 </head>
 
 <body>
@@ -100,16 +105,16 @@
         </div>
         <!--代码分割线-->
         <footer style="text-align: center;">
+            <div>
+                <p style="text-align: center;">
+                    友情链接：<a href="TVBOX/index.html" style="color: #4696f9">TVBOX视频订阅</a>
+                </p>
+            </div>
             <span id="sitetime"></span> <!-- 运行时间 --></br>
             Copyright ©时光忘忧. 2022
             <script>document.write(' - ' + (new Date()).getFullYear())</script>. All Rights Reserved
         </footer> <!-- 定义页脚部分 -->
         <!--代码分割线-->
-        <div>
-            <p style="text-align: center;">
-                友情链接：<a href="TVBOX/index.html" style="color: #4696f9">TVBOX视频订阅</a>
-            </p>
-        </div>
     </div>
 </body>
 
