--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="app-download-domain">
                 <!-- 代码分割线 -->
                 <div class="domain-status">
-                    <span class="name"> Telegram</span>
+                    <span class="name"> Telegram Channel</span>
                     <div class="status-and-link">
                         <span class="app-status">原创安卓破解软件分享</span>
                         <a href="https://t.me/sgwyapk" class="app-link">加入</a>
@@ -58,7 +58,7 @@
                 </div>
                 <!-- 代码分割线 -->
                 <div class="domain-status">
-                    <span class="name">QQ Channel</span>
+                    <span class="name">Tencent Channel</span>
                     <div class="status-and-link">
                         <span class="app-status">安卓软件分享交流社区</span>
                         <a href="https://pd.qq.com/s/1oqtpdvbd" class="app-link">加入</a>
