--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
                 <!-- 代码分割线 -->
                 <div class="domain-status">
-                    <span class="name">E-mail</span>
+                    <span class="name">Contact by Email</span>
                     <div class="status-and-link">
                         <span class="app-status">发送邮件反馈与建议</span>
                         <a href="mailto:3295532395@qq.com" class="app-link">发送</a>
