--- a/TVBOX/index.html
+++ b/TVBOX/index.html
@@ -1,12 +1,20 @@
 <html lang="zh-cn">
 
 <head>
-	<meta charset="UTF-8">
+	<meta charset="utf-8"> <!-- 设置字符编码为UTF-8 -->
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <!-- 设置视口适应设备宽度 -->
+	<meta name="description" content="bin1site·导航"> <!-- 设置页面描述 -->
+	<meta name="keywords" content="bin1site,导航,bin1,网站导航,网站导航网址,网站导航网址导航,网站导航网址导航网址"> <!-- 设置页面关键词 -->
+	<meta name="author" content="bin1"> <!-- 设置作者 -->
+	<meta name="robots" content="index,follow"> <!-- 设置搜索引擎抓取 -->
+	<meta name="googlebot" content="index,follow"> <!-- 设置谷歌搜索引擎抓取 -->
+	<meta name="bingbot" content="index,follow"> <!-- 设置必应搜索引擎抓取 -->
+	<meta name="slurp" content="index,follow"> <!-- 设置搜狗搜索引擎抓取 -->
+	<meta name="yandex" content="index,follow"> <!-- 设置雅虎搜索引擎抓取 -->
+	<meta name="baidu" content="index,follow"> <!-- 设置百度搜索引擎抓取 -->
+	<meta name="sogou" content="index,follow"> <!-- 设置搜狗搜索引擎抓取 -->
 	<title>TVBox订阅源接口展示</title>
-	<meta name="viewport"
-		content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<meta charset="utf-8">
-	<link rel="shortcut icon" type="image/x-icon" href="favicon.png">
+	<link rel="shortcut icon" type="image/x-icon" href="logo.png">
 	<link rel="stylesheet" href="tvbox.css"> <!-- 链接外部样式表 -->
 </head>
 
@@ -15,7 +23,7 @@
 		<div class="profile-card js-profile-card">
 			<!--代码分割线-->
 			<div class="profile-card__img">
-				<img src="logo.jpg" alt="profile card">
+				<img src="logo.png" alt="profile card">
 			</div>
 			<!--代码分割线-->
 			<div class="profile-card__cnt js-profile-cnt">
