--- a/TVBOX/index.html
+++ b/TVBOX/index.html
@@ -15,7 +15,7 @@
 	<meta name="sogou" content="index,follow"> <!-- 设置搜狗搜索引擎抓取 -->
 	<title>TVBox订阅源接口展示</title>
 	<link rel="shortcut icon" type="image/x-icon" href="logo.png">
-	<link rel="stylesheet" href="tvbox.css"> <!-- 链接外部样式表 -->
+	<link rel="stylesheet" href="styles.css"> <!-- 链接外部样式表 -->
 </head>
 
 <body>
