--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8"> <!-- 设置字符编码为UTF-8 -->
     <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- 设置视口适应设备宽度 -->
-    <meta name="description" content="bin1site·导航"> <!-- 设置页面描述 -->
-    <meta name="keywords" content="bin1site,导航,bin1,网站导航,网站导航网址,网站导航网址导航,网站导航网址导航网址"> <!-- 设置页面关键词 -->
+    <meta name="description" content="时光忘忧·导航"> <!-- 设置页面描述 -->
+    <meta name="keywords" content="时光忘忧,导航,网站导航,网站导航网址,网站导航网址导航,网站导航网址导航网址"> <!-- 设置页面关键词 -->
     <meta name="author" content="bin1"> <!-- 设置作者 -->
     <meta name="robots" content="index,follow"> <!-- 设置搜索引擎抓取 -->
     <meta name="googlebot" content="index,follow"> <!-- 设置谷歌搜索引擎抓取 -->
