--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
             <h3 id="toggleText"></h3>
         </div>
         <div style="text-align: center;">
+            <a class="location" style="font-size: 12px;">
+                <img src="IMG/location.png" alt="" style="vertical-align: middle;">广东🔹广州
+            </a>
+        </div>
+        <!-- 代码分割线 -->
+        <div style="text-align: center;">
             <script>
                 // 定义一个包含多个标签的数组
                 const tags = ["HTML", "CSS", "JavaScript", "Website", "Wordpress", "C", "Java", "Smali"];
@@ -42,6 +48,7 @@
             <colourful-text id="colourful-text"></colourful-text>
             <br></br>
         </div>
+        <!-- 代码分割线 -->
         <div class="box">
             <div class="content">
                 <p>这里是 <a>@时光忘忧</a> 的个人主页，用于公布最新社区交流群链接。如果你加入的交流群无法继续使用，那么这个页面可以帮你快速找到替代的交流群。
