--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <h3 id="toggleText"></h3>
         </div>
         <div style="text-align: center;">
-            <a class="location" style="font-size: 12px;">
-                <img src="IMG/location.png" alt="" style="vertical-align: middle;">广东🔹广州
+            <a style="font-size: 12px;">
+                🌎广东 - 广州
             </a>
         </div>
         <!-- 代码分割线 -->
