--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
                     友情链接<br />
                     <a href="https://github.com/bin1site1/bin1site1.github.io" style="color: #a73ff6">Github项目地址</a> |
                     <a href="TVBOX/index.html" style="color: #4696f9">TVBOX接口订阅</a><br />
-                    <a href="https://www.microsoft.com/zh-cn/software-download/windows11"
-                        style="color: #f98b46">Windows 11 官方下载</a> |
+                    <a href="https://www.microsoft.com/zh-cn/software-download/windows11" style="color: #f98b46">Windows
+                        11 官方下载</a> |
                     <a href="https://msdn.itellyou.cn" style="color: #25d46b">MSDN 我告诉你！</a>
                 </p>
             </div>
