--- a/index.html
+++ b/index.html
@@ -51,25 +51,25 @@
         <!-- 代码分割线 -->
         <div class="box">
             <div class="content">
-                <p>这里是 <a>@时光忘忧</a> 的个人主页，用于公布最新社区交流群链接。如果你加入的交流群无法继续使用，那么这个页面可以帮你快速找到替代的交流群。
+                <p>这里是 <a>@时光忘忧</a> 的个人主页，用于公布最新社区交流群链接。如果你加入的交流群无法继续使用，那么这个页面可以帮你快速找到替代的频道或者交流群。
                 </p>
             </div>
             <!-- 代码分割线 -->
             <div class="app-download-domain">
                 <!-- 代码分割线 -->
                 <div class="domain-status">
-                    <span class="name"> Telegram频道</span>
-                    <div class="status-and-link">
-                        <span class="app-status">原创安卓破解软件分享</span>
-                        <a href="https://t.me/sgwyapk" class="app-link">加入</a>
-                    </div>
-                </div>
-                <!-- 代码分割线 -->
-                <div class="domain-status">
                     <span class="name">Tencent频道</span>
                     <div class="status-and-link">
                         <span class="app-status">安卓软件分享交流社区</span>
                         <a href="https://pd.qq.com/s/1oqtpdvbd" class="app-link">加入</a>
+                    </div>
+                </div>
+                <!-- 代码分割线 -->
+                <div class="domain-status">
+                    <span class="name"> Telegram频道</span>
+                    <div class="status-and-link">
+                        <span class="app-status">原创安卓破解软件分享</span>
+                        <a href="https://t.me/sgwyapk" class="app-link">加入</a>
                     </div>
                 </div>
                 <!-- 代码分割线 -->
@@ -115,7 +115,7 @@
         <footer style="text-align: center;">
             <div>
                 <p style="text-align: center;">
-                    友情链接<br />
+                    - 友情链接 -<br />
                     <a href="https://github.com/bin1site1/bin1site1.github.io" style="color: #a73ff6">Github项目地址</a> |
                     <a href="TVBOX/index.html" style="color: #4696f9">TVBOX接口订阅</a><br />
                     <a href="https://www.microsoft.com/zh-cn/software-download/windows11" style="color: #f98b46">Windows
