--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
                         </div>
                         <div class="list-content">
                             <h4>普通成员群（免费）</h4>
-                            <p>仅闲聊，不分享资源。原创破解和收集整理均要花费大量时间和精力，为爱发电无法长久。</p>
+                            <p>仅闲聊无资源分享。原创破解和收集整理均要花费大量时间和精力，为爱发电无法长久。</p>
                         </div>
                         <div class="list-content">
                             <h4>VIP群加入方法</h4>
-                            <p>关注QQ频道私信频道主，或加附属QQ群私信群主赞助后即可加入。（持续更新超两年半）</p>
+                            <p>关注QQ频道私信频道主，或加附属QQ群私信群主赞助后加入。（已持续更新时长两年半）</p>
                         </div>
                     </div>
                 </div>
