--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@
                 <div class="domain-status">
                     <span class="name">Tencent频道</span>
                     <div class="status-and-link">
-                        <span class="app-status">安卓软件分享交流社区</span>
+                        <span class="app-status">安卓软件互动交流社区</span>
                         <a href="https://pd.qq.com/s/1oqtpdvbd" class="app-link">加入</a>
                     </div>
                 </div>
                 <!-- 代码分割线 -->
                 <div class="domain-status">
-                    <span class="name"> Telegram频道</span>
+                    <span class="name"> QQ交流群</span>
                     <div class="status-and-link">
-                        <span class="app-status">原创安卓破解软件分享</span>
-                        <a href="https://t.me/sgwyapk" class="app-link">加入</a>
+                        <span class="app-status">免费软件资源交流群</span>
+                        <a href="https://qm.qq.com/q/cq2YZkET7O" class="app-link">加入</a>
                     </div>
                 </div>
                 <!-- 代码分割线 -->
@@ -91,7 +91,7 @@
                         </div>
                         <div class="list-content">
                             <h4>普通成员群（免费）</h4>
-                            <p>仅闲聊无资源分享。原创破解和收集整理均要花费大量时间和精力，为爱发电无法长久。</p>
+                            <p>软件资源非常少。原创破解和收集整理均要花费大量时间和精力，为爱发电无法长久。</p>
                         </div>
                         <div class="list-content">
                             <h4>VIP群加入方法</h4>
