--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>
             <br />
             <span id="sitetime"></span> <!-- 运行时间 --></br>
-            Copyright ©𝙇𝙤𝙩𝙪𝙨. 2022
+            Copyright ©时光忘忧. 2022
             <script>document.write(' - ' + (new Date()).getFullYear())</script>. All Rights Reserved
         </footer> <!-- 定义页脚部分 -->
         <!--代码分割线-->
