--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     // 定义一个包含多个标签的元素
                 });
             </script><br></br><!-- 显示标签 -->
-            <colourful-text id="colourful-text"></colourful-text>
+            <colourful-text>长风破浪会有时，直挂云帆济沧海。</colourful-text>
             <br></br>
         </div>
         <!-- 代码分割线 -->
