--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="main">
         <div class="logo"><img src="IMG/logo.png" class="hover-zoom" onclick="location.reload();"></div>
         <div class="title" style="text-align: center; font-size: 20px;  color: #fc8ec9;">
-            <h3>@时光忘忧</h3>
+            <h3>@时光忘忧𝙇𝙤𝙩𝙪𝙨</h3>
         </div>
         <!-- 代码分割线 -->
         <div style="text-align: center;">
