--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="main">
         <div class="logo"><img src="IMG/logo.png" class="hover-zoom" onclick="location.reload();"></div>
         <div class="title" style="text-align: center; font-size: 20px;  color: #fc8ec9;">
-            <h3>@时光忘忧𝙇𝙤𝙩𝙪𝙨</h3>
+            <h3>@时光忘忧</h3>
         </div>
         <!-- 代码分割线 -->
         <div style="text-align: center;">
@@ -46,7 +46,7 @@
         <!-- 代码分割线 -->
         <div class="box">
             <div class="content">
-                <p>这里是 <a>@时光忘忧</a> 的个人主页，用于公布最新社区交流群链接。如果你加入的交流群无法继续使用，那么这个页面可以帮你快速找到替代的频道或者交流群。
+                <p>这里是 <a>@𝙇𝙤𝙩𝙪𝙨</a> 的个人主页，用于公布最新社区交流群链接。如果你加入的交流群无法继续使用，那么这个页面可以帮你快速找到替代的频道或者交流群。
                 </p>
             </div>
             <!-- 代码分割线 -->
