--- a/index.html
+++ b/index.html
@@ -80,9 +80,8 @@
             <!-- 代码分割线 -->
             <div class="content">
                 <p><a><strong>关于交流群加群说明</strong></a><br />
-                    ✅ 加入QQ群，请认真阅读群公告，并遵守群规，严禁在群内发表广告、推广其他群组，或者分享带有引流性质的文件或链接，一经发现，将会被永久踢出群。<br />
                     ✅原创破解和收集整理花费大量时间和精力，不为爱发电。因此，请各位群友认真考虑是否加入赞助群。<br />
-                    ✅赞助群和免费群，区别如下：
+                    ✅区别如下：
                 </p>
                 <div class="list">
                     <div class="list-main">
@@ -96,7 +95,7 @@
                         </div>
                         <div class="list-content">
                             <h4>VIP群加入方法</h4>
-                            <p>关注腾讯频道私信频道主或加QQ群私信群主赞助加入。（已持续更新时长两年半）</p>
+                            <p>关注腾讯频道查看附属QQ群私信群主赞助加入。（已持续更新时长两年半）</p>
                         </div>
                     </div>
                 </div>
