--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
             </div>
             <!-- 代码分割线 -->
             <div class="content">
-                <p><a><strong>关于交流群加群说明</strong></a><br />
-                    ✅原创破解和收集整理花费大量时间和精力，不为爱发电。因此，请各位群友认真考虑是否加入赞助群。<br />
-                    ✅区别如下：
+                <p><a><strong>交流群 - 加群说明：</strong></a><br />
+                    ✅原创破解和收集整理花费大量时间和精力，不为爱发电。因此，请各位群友考虑是否加入赞助群。<br />
+                    ✅加入赞助群，可以获得更多优质资源，包括：软件、Windows、Office、教程、注册码等。
                 </p>
                 <div class="list">
                     <div class="list-main">
