--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
             <!-- 代码分割线 -->
             <div class="content">
                 <p><a><strong>交流群 - 加群说明：</strong></a><br />
-                    ✅原创破解和收集整理花费大量时间和精力，不为爱发电。因此，请各位群友考虑是否加入赞助群。<br />
-                    ✅加入赞助群，可以获得更多优质资源，包括：软件、Windows、Office、教程、注册码等。
+                    ✅原创破解和收集整理花费大量时间和精力，不为爱发电。各位群友自行考虑是否加入赞助群。
                 </p>
                 <div class="list">
                     <div class="list-main">
