--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
             <div>
                 <p style="text-align: center;">
                     - 友情链接 -<br />
+                    <strong><a href="https://ym.ksjhaoka.com/?s=0tToasKQ98111"
+                            style="color: #e97387">低价高速大流量卡，0元免费包邮到家！</a></strong><br />
                     <a href="https://github.com/bin1site1/bin1site1.github.io" style="color: #a73ff6">Github项目地址</a> |
                     <a href="TVBOX/index.html" style="color: #4696f9">TVBOX接口订阅</a><br />
                     <a href="https://www.microsoft.com/zh-cn/software-download/windows11" style="color: #f98b46">Windows
