--- a/index.html
+++ b/index.html
@@ -104,6 +104,25 @@
             </div>
         </div>
         <!--代码分割线-->
+        <div class="app-download-domain">
+            <!-- 代码分割线 -->
+            <div class="domain-status">
+                <span class="name">软件合集（赞助专属）</span>
+                <div class="status-and-link">
+                    <span class="app-status">破解软件合集蓝奏云链接</span>
+                    <a href="https://gobanfans.lanzoub.com/u/奈何独笑长亭" class="app-link">查看</a>
+                </div>
+            </div>
+            <!-- 代码分割线 -->
+            <div class="domain-status">
+                <span class="name">长城天梯（赞助专属）</span>
+                <div class="status-and-link">
+                    <span class="app-status">免费VPN与代理工具合集</span>
+                    <a href="https://bin1site1.github.io" class="app-link">查看</a>
+                </div>
+            </div>
+            <!-- 代码分割线 -->
+        </div>
         <footer style="text-align: center;">
             <div>
                 <p style="text-align: center;">
