--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
                         </div>
                         <div class="list-content">
                             <h4>普通成员群（免费）</h4>
-                            <p>软件质量低、广告多、资源少、版本老旧、更新不定时，随时清理不活跃成员。</p>
+                            <p>软件质量低资源少、更新不定时，随时清理不活跃成员。</p>
                         </div>
                         <div class="list-content">
                             <h4>VIP群加入方法</h4>
-                            <p>关注腾讯频道查看附属QQ群私信群主赞助加入。（已持续更新时长两年半）</p>
+                            <p>加入QQ群私信群主赞助加入。（已持续更新时长两年半）</p>
                         </div>
                     </div>
                 </div>
