--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="list-main">
                         <div class="list-content">
                             <h4>赞助成员群（赞助¥50）</h4>
-                            <p>安卓软件、Windows软件、Windows密钥、Office密钥、教程资料、软件注册码等资源。</p>
+                            <p>安卓软件、Windows软件、Windows密钥、Office密钥、教程资料等资源。</p>
                         </div>
                         <div class="list-content">
                             <h4>普通成员群（免费）</h4>
