--- a/index.html
+++ b/index.html
@@ -78,17 +78,19 @@
             <!-- 代码分割线 -->
             <div class="content">
                 <p><a><strong>交流群 - 加群说明：</strong></a><br />
-                    ✅原创破解和收集整理花费大量时间和精力，不为爱发电。各位群友自行考虑是否加入赞助群。
+                    ✅原创破解和收集整理花费大量时间精力，不为爱发电，想白嫖优质资源的不要浪费时间加群了。
+                    <br />
+                    ✅加群的请务必第一时间阅读群公告，发布讨论违法违规内容将被永久拉黑踢出群。
                 </p>
                 <div class="list">
                     <div class="list-main">
                         <div class="list-content">
                             <h4>赞助成员群（赞助¥50）</h4>
-                            <p>安卓软件、Windows软件、Windows密钥、Office密钥、教程资料等资源。</p>
+                            <p>安卓软件、Windows软件、Windows密钥、Office密钥、教程资料 等。</p>
                         </div>
                         <div class="list-content">
                             <h4>普通成员群（免费）</h4>
-                            <p>软件质量低资源少、更新不定时，随时清理不活跃成员。</p>
+                            <p>软件质量低，资源少、不定时更新，随时清理不活跃成员。</p>
                         </div>
                         <div class="list-content">
                             <h4>VIP群加入方法</h4>
