--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!-- 代码分割线 -->
         <div class="box">
             <div class="content">
-                <p>这里是 <a>@𝙇𝙤𝙩𝙪𝙨</a> 的个人主页，用于公布最新社区交流群链接。如果你加入的交流群无法继续使用，那么这个页面可以帮你快速找到替代的频道或者交流群。
+                <p>这里是 <a>@𝐿𝑜𝑡𝑢𝑠_𝑀𝑜𝑑</a> 的个人主页，用于公布最新社区交流群链接。如果你加入的交流群无法继续使用，那么这个页面可以帮你快速找到替代的频道或者交流群。
                 </p>
             </div>
             <!-- 代码分割线 -->
@@ -80,7 +80,7 @@
                 <p><a><strong>交流群 - 加群说明：</strong></a><br />
                     ✅原创破解和收集整理花费大量时间精力，不为爱发电，想白嫖优质资源的不要浪费时间加群了。
                     <br />
-                    ✅加群的请务必第一时间阅读群公告，发布讨论违法违规内容将被永久拉黑踢出群。
+                    ✅加入群聊务必第一时间仔细<a>阅读群公告</a>，发布讨论违法违规内容将被永久拉黑踢出群。
                 </p>
                 <div class="list">
                     <div class="list-main">
@@ -90,7 +90,7 @@
                         </div>
                         <div class="list-content">
                             <h4>普通成员群（免费）</h4>
-                            <p>软件质量低，资源少、不定时更新，随时清理不活跃成员。</p>
+                            <p>软件质量低资源少，随时清理不活跃成员，群人数上限500人，人满需等待空位。</p>
                         </div>
                         <div class="list-content">
                             <h4>VIP群加入方法</h4>
